# core-template-rust

./: .gitignore  Cargo.toml  Makefile
scripts/: build.sh  setup.sh  test.sh
src/: lib.rs
src/n-framework-core-template-abstractions/: Cargo.toml
src/n-framework-core-template-abstractions/src/: lib.rs  template_context.rs  template_context.tests.rs
src/n-framework-core-template-abstractions/src/abstractions/: file_generator.rs
src/n-framework-core-template-abstractions/src/errors/: mod.rs  template_error.rs  template_error.tests.rs
src/n-framework-core-template-abstractions/tests/: template_error_tests.rs  unit_tests.rs
src/n-framework-core-template-mustache/: Cargo.toml
src/n-framework-core-template-mustache/src/: mustache_template_renderer.rs  mustache_template_renderer.tests.rs
src/n-framework-core-template-mustache/tests/unit/: mod.rs
src/n-framework-core-template-tera/: Cargo.toml
src/n-framework-core-template-tera/src/: lib.rs  tera_file_generator.rs  tera_file_generator.tests.rs  tera_template_renderer.rs
src/n-framework-core-template-tera/tests/: tera_tests.rs
src/nframework-core-template-abstractions/: Cargo.toml
src/nframework-core-template-abstractions/src/: lib.rs  template_context.rs
src/nframework-core-template-abstractions/src/abstractions/: file_generator.rs  mod.rs  template_renderer.rs
src/nframework-core-template-abstractions/tests/: template_error_tests.rs  unit_tests.rs
src/nframework-core-template-mustache/: Cargo.toml
src/nframework-core-template-mustache/src/: lib.rs  mustache_template_renderer.rs
(+5 files in other folders)
