[package]
name = "n-framework-core-template-tera"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
n-framework-core-template-abstractions = { path = "../n-framework-core-template-abstractions" }
tera = "1.20"
walkdir = "2.5"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.27.0"
